--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,6 @@ gradle.properties
 config/*
 client.log
 
-# Example Code
-src/*/java/twitch4j/example/*
-
 # Modules
 /modules/
 
@@ -60,3 +57,8 @@ docs/
 # Pipeline
 dist/*
 tmp/*
+
+# Generated Code
+usage-example/.openapi-generator*
+usage-example/src/main/java/*
+usage-example/src/test/java/*
