--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ allprojects {
         version = "1.18.20"
     }
 
+    // java version
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+
     // In this section you declare the dependencies for your production and test code
     dependencies {
         // Constraints
