feat: add a custom generator / move spec out of the api class

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ allprojects {
         // Constraints
         constraints {
             // OpenAPI Generator
-            api 'org.openapitools:openapi-generator:5.2.1'
+            api group: 'org.openapitools', name: 'openapi-generator', version: "${property('openapitools.version')}"
         }
 
         // JUnit5
