--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include 'template-engine', 'java-feign', 'usage-example'
+include 'template-engine', 'core', 'java-feign', 'cli', 'usage-example'
 
 rootProject.name = 'openapi-generator'
 rootProject.children.each {
