--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ local.properties
 .gradletasknamecache
 .gradle/
 !gradle/wrapper/*.jar
-gradle.properties
+!gradle.properties
 
 # Logs / Save Files
 config/*
